--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         </header>
        <main>
            <h1>Food Delivery System First Brainstorm (3rd Meeting)</h1>
-           <h3>October 3, 2021</h4>
+           <h3>October 3, 2021</h3>
 
            <h2 id="attendence">Check-ins</h2>
-                <h3><details><summary>Team Project</summary>The name of our team</details> attendence</h3>
+            <details><summary>Team Project</summary>The name of our team</details> Attendence
            <ol>
                 <li><input type="checkbox" /> Jiayi Zhao</li>
                 <li><input type="checkbox" /> Tommy Ryans</li>
@@ -38,10 +38,10 @@
             <h2 id="to-do">Things To Do</h2>
             <ol>
                 <li>Last time, we confirm our topic. In this meeting, we need to discuss the <b>functions of the webpage</b>. In addition, we need to make a rough draft of the UI/UX design.
-                    <img src="https://miro.medium.com/max/865/1*LIAu1pZIZABu049UI-_L3Q.jpeg" width="100"></li>
+                    <img src="https://miro.medium.com/max/865/1*LIAu1pZIZABu049UI-_L3Q.jpeg" alt="UI/UX figure" width="100"></li>
                 <li>We also need to discuss the <b>workload spreading</b> among the team in order to give each member a fair amount of work.</li>
                 <li>Make a <b>project proposal timeline</b> which helps time organizing.
-                    <img src="https://www.slideteam.net/media/catalog/product/cache/960x720/4/_/4_week_project_calendar_timeline_by_month_slide01.jpg" width="500">
+                    <img src="https://www.slideteam.net/media/catalog/product/cache/960x720/4/_/4_week_project_calendar_timeline_by_month_slide01.jpg" alt="Project proposal timeline template" width="500">
                 </li>
             </ol>
 
@@ -54,9 +54,9 @@
 
            <h2 id="record">Recording(s)</h2>
                 <p>The following video is the recording of this meeting.</p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/nX1YzS_CYIw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/nX1YzS_CYIw" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p>The following audio is the audio version of this meeting.</p>
-                <audio controls src="Meeting Audio.mp3"> Your browser does not support the <code>audio</code> element.</audio>
+                <audio src="Meeting Audio.mp3"> Your browser does not support the <code>audio</code> element.</audio>
         </main>
     </body>
 </html>
