--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
            <h3>October 3, 2021</h3>
 
            <h2 id="attendence">Check-ins</h2>
-            <details><summary>Team Project</summary>The name of our team</details> Attendence
+            <p>Attendence of <details><summary>Team Project</summary>The name of our team</details> </p>
            <ol>
                 <li><input type="checkbox" /> Jiayi Zhao</li>
                 <li><input type="checkbox" /> Tommy Ryans</li>
@@ -56,7 +56,7 @@
                 <p>The following video is the recording of this meeting.</p>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/nX1YzS_CYIw" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p>The following audio is the audio version of this meeting.</p>
-                <audio src="Meeting Audio.mp3"> Your browser does not support the <code>audio</code> element.</audio>
+                <audio controls="controls" src="Meeting Audio.mp3"> Your browser does not support the <code>audio</code> element.</audio>
         </main>
     </body>
 </html>
