--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
             </nav>
         </header>
        <main>
-           <h1>Food Delivery System First Brainstorm (3rd Meeting)</h1>
-           <h3>October 3, 2021</h3>
+           <h2>Food Delivery System First Brainstorm (3rd Meeting)</h2>
+           <h4>October 3, 2021</h4>
+           <details><summary>Team Project</summary>The name of our team</details>
 
-           <h2 id="attendence">Check-ins</h2>
-            <p>Attendence of <details><summary>Team Project</summary>The name of our team</details> </p>
+           <h3 id="attendence">Check-ins</h3>
+        
            <ol>
                 <li><input type="checkbox" /> Jiayi Zhao</li>
                 <li><input type="checkbox" /> Tommy Ryans</li>
@@ -30,12 +31,12 @@
                 <li><input type="checkbox" /> Victoria First</li>
             </ol>
 
-           <h2 id="pre">Previous Meetings</h2>
+           <h3 id="pre">Previous Meetings</h3>
                 <p>In the previous meetings, we greeted each other (1st meeting) and brainstormed our topic of CSE 110 project.
                     We picked our team name as "Team Project". We meant to be fun in our team discussion. We left off some detail functions on this project.
                 </p>
            
-            <h2 id="to-do">Things To Do</h2>
+            <h3 id="to-do">Things To Do</h3>
             <ol>
                 <li>Last time, we confirm our topic. In this meeting, we need to discuss the <b>functions of the webpage</b>. In addition, we need to make a rough draft of the UI/UX design.
                     <img src="https://miro.medium.com/max/865/1*LIAu1pZIZABu049UI-_L3Q.jpeg" alt="UI/UX figure" width="100"></li>
@@ -45,18 +46,18 @@
                 </li>
             </ol>
 
-           <h2 id="concern">Concerns</h2>
+           <h3 id="concern">Concerns</h3>
            <textarea rows="5" cols="33">
                1. This ethics approah for this project (e.g. privicay, copyright)
                2. Time controls
                3. How to deal with team conflict
             </textarea>
 
-           <h2 id="record">Recording(s)</h2>
+           <h3 id="record">Recording(s)</h3>
                 <p>The following video is the recording of this meeting.</p>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/nX1YzS_CYIw" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p>The following audio is the audio version of this meeting.</p>
-                <audio controls="controls" src="Meeting Audio.mp3"> Your browser does not support the <code>audio</code> element.</audio>
+                <audio controls="controls" src="Meeting_Audio.mp3"> Your browser does not support the <code>audio</code> element.</audio>
         </main>
     </body>
 </html>
