--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>Food Delivery System Second Brainstorm</title>
+        <link rel="icon" type="image/x-icon" href="icon.png"/>
     </head>
     <body>
         <header>
