--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
            <h2>Food Delivery System First Brainstorm (3rd Meeting)</h2>
            <h4>October 3, 2021</h4>
            <details><summary>Team Project</summary>The name of our team</details>
-           <div>Meeting Agenda</div> 
+           
+           <h3>Meeting Agenda</h3>
            <nav>
                 <ul>
                     <li><a href="#attendence">Check-ins</a></li>
@@ -19,8 +20,8 @@
                     <li><a href="#record">Recording(s)</a></li>
                 </ul>
             </nav>
+
            <h3 id="attendence">Check-ins</h3>
-        
            <ol>
                 <li><input type="checkbox" /> Jiayi Zhao</li>
                 <li><input type="checkbox" /> Tommy Ryans</li>
