--- a/index.html
+++ b/index.html
@@ -46,11 +46,14 @@
             </ol>
 
            <h3 id="concern">Concerns</h3>
-           <textarea rows="5" cols="33">
-               1. This ethics approah for this project (e.g. privicay, copyright)
-               2. Time controls
-               3. How to deal with team conflict
-            </textarea>
+           <ol>
+               <li>The ethics approah for this project (e.g. privicay, copyright)</li> 
+               <li>Time controls</li> 
+               <li>How to deal with team conflict</li>
+           </ol>
+           <p>Extra temproray concerns:</p>
+           <textarea rows="5" cols="33"></textarea>
+
 
            <h3 id="record">Recording(s)</h3>
                 <p>The following video is the recording of this meeting.</p>
