update html and css

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <title>Food Delivery System Second Brainstorm</title>
         <link rel="icon" type="image/x-icon" href="icon.png"/>
+        <link href = "style.css" rel="stylesheet"/>
     </head>
     <body>  
        <main>
-           <h2>Food Delivery System First Brainstorm (3rd Meeting)</h2>
+           <h2 class="title">Food Delivery System First Brainstorm (3rd Meeting)</h2>
            <h4>October 3, 2021</h4>
            <details><summary>Team Project</summary>The name of our team</details>
            
