--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <body>  
        <main>
            <h2 class="title">Food Delivery System First Brainstorm (3rd Meeting)</h2>
-           <h4>October 3, 2021</h4>
-           <details><summary>Team Project</summary>The name of our team</details>
+           <h4 id="date">October 3, 2021</h4>
+           <details><summary>By - Team Project</summary>The name of our team</details>
            
+           <section id = "Agenda"> 
            <h3>Meeting Agenda</h3>
            <nav>
                 <ul>
@@ -21,8 +22,10 @@
                     <li><a href="#record">Recording(s)</a></li>
                 </ul>
             </nav>
+            </section>
 
-           <h3 id="attendence">Check-ins</h3>
+            <section id="attendence">
+           <h3>Check-ins</h3>
            <ol>
                 <li><input type="checkbox" /> Jiayi Zhao</li>
                 <li><input type="checkbox" /> Tommy Ryans</li>
@@ -30,13 +33,17 @@
                 <li><input type="checkbox" /> Jack Woo</li>
                 <li><input type="checkbox" /> Victoria First</li>
             </ol>
+            </section>
 
-           <h3 id="pre">Previous Meetings</h3>
+            <section id="pre">
+           <h3 >Previous Meetings</h3>
                 <p>In the previous meetings, we greeted each other (1st meeting) and brainstormed our topic of CSE 110 project.
                     We picked our team name as "Team Project". We meant to be fun in our team discussion. We left off some detail functions on this project.
                 </p>
-           
-            <h3 id="to-do">Things To Do</h3>
+           </section>
+
+           <section id="to-do">
+            <h3 >Things To Do</h3>
             <ol>
                 <li>Last time, we confirm our topic. In this meeting, we need to discuss the <b>functions of the webpage</b>. In addition, we need to make a rough draft of the UI/UX design.
                     <img src="https://miro.medium.com/max/865/1*LIAu1pZIZABu049UI-_L3Q.jpeg" alt="UI/UX figure" width="100"></li>
@@ -45,8 +52,10 @@
                     <img src="https://www.slideteam.net/media/catalog/product/cache/960x720/4/_/4_week_project_calendar_timeline_by_month_slide01.jpg" alt="Project proposal timeline template" width="500">
                 </li>
             </ol>
+            </section>
 
-           <h3 id="concern">Concerns</h3>
+           <section id="concern">
+           <h3>Concerns</h3>
            <ol>
                <li>The ethics approah for this project (e.g. privicay, copyright)</li> 
                <li>Time controls</li> 
@@ -54,13 +63,15 @@
            </ol>
            <p>Extra temproray concerns:</p>
            <textarea rows="5" cols="33"></textarea>
+            </section>>
 
-
-           <h3 id="record">Recording(s)</h3>
+           <section id="record">
+           <h3 >Recording(s)</h3>
                 <p>The following video is the recording of this meeting.</p>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/nX1YzS_CYIw" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p>The following audio is the audio version of this meeting.</p>
                 <audio controls="controls" src="Meeting_Audio.mp3"> Your browser does not support the <code>audio</code> element.</audio>
+           </section>
         </main>
     </body>
 </html>
