--- a/index.html
+++ b/index.html
@@ -45,32 +45,40 @@
            <section id="to-do">
             <h3 >Things To Do</h3>
             <ol>
-                <li>Last time, we confirm our topic. In this meeting, we need to discuss the <b>functions of the webpage</b>. In addition, we need to make a rough draft of the UI/UX design.
+                <li>Last time, we confirm our topic. In this meeting, we need to discuss the <b>functions of the webpage</b>.
+                     In addition, we need to make a rough draft of the UI/UX design. <br>
                     <img src="https://miro.medium.com/max/865/1*LIAu1pZIZABu049UI-_L3Q.jpeg" alt="UI/UX figure" width="100"></li>
                 <li>We also need to discuss the <b>workload spreading</b> among the team in order to give each member a fair amount of work.</li>
-                <li>Make a <b>project proposal timeline</b> which helps time organizing.
+                <li>Make a <b>project proposal timeline</b> which helps time organizing.<br>
                     <img src="https://www.slideteam.net/media/catalog/product/cache/960x720/4/_/4_week_project_calendar_timeline_by_month_slide01.jpg" alt="Project proposal timeline template" width="500">
                 </li>
             </ol>
             </section>
 
-           <section id="concern">
-           <h3>Concerns</h3>
-           <ol>
-               <li>The ethics approah for this project (e.g. privicay, copyright)</li> 
-               <li>Time controls</li> 
-               <li>How to deal with team conflict</li>
-           </ol>
-           <p>Extra temproray concerns:</p>
-           <textarea rows="5" cols="33"></textarea>
+            <section id="concern">
+                <h3>Concerns</h3>
+                <div class = "grid-container">
+                    <ol id="grid-item1">
+                        <li>The ethics approah for this project (e.g. privicay, copyright)</li> 
+                        <li>Time controls</li> 
+                        <li>How to deal with team conflict</li>
+                    </ol>
+                    <p id="grid-item2">Extra temproray concerns:<br>
+                        <textarea rows="5" cols="33"></textarea>
+                    </p>
+                </div>
             </section>>
 
            <section id="record">
-           <h3 >Recording(s)</h3>
-                <p>The following video is the recording of this meeting.</p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/nX1YzS_CYIw" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <p>The following audio is the audio version of this meeting.</p>
-                <audio controls="controls" src="Meeting_Audio.mp3"> Your browser does not support the <code>audio</code> element.</audio>
+           <h3>Recording(s)</h3>
+                <div class="flex-container">
+                <p id="flex-item">The following video is the recording of this meeting.<br>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/nX1YzS_CYIw" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </p>
+                <p id="flex-item"> The following audio is the audio version of this meeting. <br>
+                    <audio controls="controls" src="Meeting_Audio.mp3"> Your browser does not support the <code>audio</code> element.</audio>
+                </p>
+            </div>
            </section>
         </main>
     </body>
